Implement hook Resource:Users::getRelatedUsers.

--- a/Members/locales/de/member.ini
+++ b/Members/locales/de/member.ini
@@ -1,42 +1,63 @@
 [tabs]
-index					= "Verbindungen"
-search					= "Neue Kontakte"
+index						= "Verbindungen"
+search						= "Neue Kontakte"
 
 [user-states]
--2                      = "abgeschaltet"
--1                      = "verbannt"
-0                       = "neu"
-1                       = "aktiviert"
+-2							= "abgeschaltet"
+-1							= "verbannt"
+0							= "neu"
+1							= "aktiviert"
 
 [relation-states]
-0						= "keine"
-1						= "angefragt"
-2						= "bestätigt"
--1						= "abgelehnt"
+0							= "keine"
+1							= "angefragt"
+2							= "bestätigt"
+-1							= "abgelehnt"
 
 [view]
-heading					= "Benutzerprofil"
-buttonCancel			= "zurück"
-buttonRequest			= "Verbindung anfragen"
-buttonRevoke			= "Verbindung aufheben"
-buttonAccept			= "Anfrage annehmen"
-buttonReject			= "Anfrage ablehnen"
+heading						= "Benutzerprofil"
+buttonCancel				= "zurück"
+buttonRequest				= "Verbindung anfragen"
+buttonRevoke				= "Verbindung aufheben"
+buttonAccept				= "Anfrage annehmen"
+buttonReject				= "Anfrage ablehnen"
+
+labelUsername				= "Benutzername"
+labelRegisteredAt			= "beigetreten"
+labelRegisteredAt_prefix	= "vor"
+labelRegisteredAt_suffix	= ""
+labelLoggedAt				= "zuletzt eingeloggt"
+labelLoggedAt_prefix		= "vor"
+labelLoggedAt_suffix		= ""
+labelActiveAt				= "zuletzt gesehen"
+labelActiveAt_prefix		= "vor"
+labelActiveAt_suffix		= ""
+labelStatus					= "Kontostatus"
+labelRelation				= "Verbindung"
+
+labelName					= "Vor- und Nachname"
+labelRole					= "Rolle"
+labelEmail					= "E-Mail"
+
 
 [mails]
-onRequest				= "Anfrage nach Verbindung"
-onAccept				= "Anfrage nach Verbindung angenommen"
-onReject				= "Anfrage nach Verbindung abgelehnt"
-onRevoke				= "Verbindung beendet"
+onRequest					= "Anfrage nach Verbindung"
+onAccept					= "Anfrage nach Verbindung angenommen"
+onReject					= "Anfrage nach Verbindung abgelehnt"
+onRevoke					= "Verbindung beendet"
 
 [msg]
-successAccepted			= "Die Verbindungsanfrage wurde angenommen. Der Anfragende wurde informiert."
-successRejected			= "Die Verbindungsanfrage wurde abgelehnt. Der Anfragende wurde informiert."
-successRequested		= "Relation request has been sent. Please wait for confirmation!"
-successRevoke			= "Die Verbindung wurde aufgelöst. Der andere Benutzer wurde informiert."
+successAccepted				= "Die Verbindungsanfrage wurde angenommen. Der Anfragende wurde informiert."
+successRejected				= "Die Verbindungsanfrage wurde abgelehnt. Der Anfragende wurde informiert."
+successRequested			= "Relation request has been sent. Please wait for confirmation!"
+successRevoke				= "Die Verbindung wurde aufgelöst. Der andere Benutzer wurde informiert."
 
-errorUserIdInvalid		= "Dieser Benutzer existiert nicht."
-errorRelationIdInvalid	= "Diese Verbindung existiert nicht ."
-errorAlreadyRequested	= "Die Verbindungsanfrage wurde bereits geschickt. Bitte auf die Reaktionen des anderen Benutzers warten!"
-errorAlreadyAccepted	= "Die Verbindungsanfrage wurde bereits angenommen."
+errorUserIdInvalid			= "Dieser Benutzer existiert nicht."
+errorRelationIdInvalid		= "Diese Verbindung existiert nicht ."
+errorAlreadyRequested		= "Die Verbindungsanfrage wurde bereits geschickt. Bitte auf die Reaktionen des anderen Benutzers warten!"
+errorAlreadyAccepted		= "Die Verbindungsanfrage wurde bereits angenommen."
 
-failureMail				= "Das Versenden der E-Mail an den anderen Benutzer ist gescheitert. Bitte später noch einmal probieren!"
+failureMail					= "Das Versenden der E-Mail an den anderen Benutzer ist gescheitert. Bitte später noch einmal probieren!"
+
+[hook-getRelatedUsers]
+label						= "verknüpfte Mitglieder"
