Implement hook Resource:Users::getRelatedUsers.

--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -155,3 +155,6 @@ headingHtml				= "Das Projekt &quot;%s&quot; wurde entfernt."
 headingText				= "Das Projekt \"%s\" wurde entfernt."
 headingFacts			= "Finaler Stand"
 headingRelations		= "Zugewiesene Einträge"
+
+[hook-getRelatedUsers]
+label					= "gemeinsame Projekte"
