Change type of view type filter.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -157,6 +157,11 @@ calendar				= "Kalender"
 kanban					= "Pinwand"
 ;gantt					= "Ablauf"
 
+[modeTypes]
+archive					= "Archiv"
+now						= "Aktuell"
+future					= "Zukunft"
+
 [priorities]
 0						= "nicht bestimmt"
 1						= "sehr wichtig"
@@ -174,6 +179,14 @@ kanban					= "Pinwand"
 2						= "in Arbeit"
 3						= "abnahmebereit"
 4						= "beendet"
+
+[filters]
+viewType				= "Ansicht"
+modeType				= "Perspektive"
+project					= "Projekt"
+priority				= "Priorität"
+status					= "Zustand"
+type					= "Eintragtyp"
 
 [filter-orders]
 status					= "Zustand"
