Reorder form fields.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -31,7 +31,7 @@ messageNoEntries	= "Keine Einträge gefunden."
 legend					= "Aufgabe/Termin hinzufügen"
 labelType				= "Typ"
 labelPriority			= "Priorität"
-labelStatus				= "Status"
+labelStatus				= "Zustand"
 labelDayWork			= "Tag"
 labelDayDue				= "Fällig am"
 labelDayStart			= "Starttag"
@@ -57,7 +57,7 @@ msgNoProjectYet			= "Bitte zuerst ein Projekt anlegen. Weiterleitung zur Projekt
 legend					= "Aufgabe/Termin bearbeiten"
 labelType				= "Typ"
 labelPriority			= "Priorität"
-labelStatus				= "Status"
+labelStatus				= "Zustand"
 labelDayWork			= "Tag"
 labelDayDue				= "Fällig am"
 labelDayStart			= "Starttag"
@@ -101,8 +101,7 @@ hintMarkdownLink		= "http://de.wikipedia.org/wiki/Markdown"
 
 [edit-panel-close]
 heading					= "Abschliessen"
-labelHours				= "Arbeitsstunden"
-suffixHours				= "h"
+labelHours				= "<abbr title="(hh:mm)">aufgewendete Arbeitszeit</abbr>"
 buttonSave				= "speichern und abschliessen"
 buttonSaveConfirm		= "Ist diese Aufgabe wirklich beendet?"
 buttonClose				= "beenden"
