Extend filter by more orderable columns.

--- a/Manage/Users/locales/de/manage/user.ini
+++ b/Manage/Users/locales/de/manage/user.ini
@@ -178,6 +178,8 @@ buttonReset				= "neu"
 [indexFilterOrders]
 username				= "Name"
 roleId					= "Rolle"
+createdAt				= "Kontoalter"
+loggedAt				= "letzer Login"
 
 [indexFilterDirections]
 ASC						= "aufsteigend"
