Change label of root image folder.

--- a/Manage/Content/Images/locales/de/manage/content/image.ini
+++ b/Manage/Content/Images/locales/de/manage/content/image.ini
@@ -53,7 +53,7 @@ buttonSave					= "anwenden"
 buttonReset					= "zurücksetzen"
 
 [index]
-labelRoot					= "Base image folder"
+labelRoot					= "Hauptordner"
 
 [index.list]
 heading						= "Bilderordner"
