Change input and display format of planned and required times.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -40,6 +40,7 @@ labelTime				= "Zeit"
 labelTimeStart			= "Startzeit"
 labelTimeEnd			= "Endzeit"
 labelMinutesProjected	= "<abbr title="(hh:mm)">Planzeit</abbr>"
+labelTimeProjected		= "<abbr title="(Format z.B. 12d 34h 56m)">Planzeit</abbr>"
 labelTitle				= "Titel"
 labelContent			= "Beschreibung"
 labelLocation			= "Ort"
@@ -69,6 +70,7 @@ labelHoursProjected		= "geplant"
 labelHoursRequired		= "benötigt"
 labelMinutesProjected	= "<abbr title="(hh:mm)">Planzeit</abbr>"
 labelMinutesRequired	= "<abbr title="(hh:mm)">Arbeitszeit</abbr>"
+labelTimeProjected		= "<abbr title="(Format z.B. 12d 34h 56m)">Planzeit</abbr>"
 labelTitle				= "Titel"
 labelContent			= "Beschreibung"
 labelLocation			= "Ort"
@@ -102,6 +104,7 @@ hintMarkdownLink		= "http://de.wikipedia.org/wiki/Markdown"
 [edit-panel-close]
 heading					= "Abschliessen"
 labelHours				= "<abbr title="(hh:mm)">aufgewendete Arbeitszeit</abbr>"
+labelTimeRequired		= "<abbr title="(Format z.B. 12d 34h 56m)">Arbeitszeit</abbr>"
 buttonSave				= "speichern und abschliessen"
 buttonSaveConfirm		= "Ist diese Aufgabe wirklich beendet?"
 buttonClose				= "beenden"
