Several small improvements.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -91,6 +91,7 @@ msgInvalidId			= "Der gewählte Eintrag existiert nicht. Weiterleitung zur Über
 msgInvalidProject		= "Der gewählte Eintrag ist einem fremden Projekt zugewiesen. Weiterleitung zur Übersicht."
 msgNotEditor			= "Das Recht zum Bearbeiten von Aufgaben wurde nicht vergeben."
 msgLocked				= "Dieser Eintrag ist gesperrt, da er gerade von %s bearbeitet wird."
+msgArchived				= "Dieser Eintrag kann nicht mehr bearbeitet werden, da er abgeschlossen ist."
 
 [edit-content]
 heading					= "Details"
@@ -137,6 +138,7 @@ labelProjectId			= "Projekt"
 buttonCancel			= "zur Liste"
 buttonEdit				= "bearbeiten"
 buttonCopy				= "kopieren"
+buttonRevamp			= "<abbr title="zurück in den Status 'in Arbeit' überführen">wieder öffnen</abbr>"
 
 [view-content]
 headingContent			= "Beschreibung"
