Add filter and extract labels to locales.

--- a/Admin/Config/locales/de/admin/config.ini
+++ b/Admin/Config/locales/de/admin/config.ini
@@ -1,8 +1,27 @@
 [index]
-heading				= "Modulkonfiguration"
-buttonSave			= "speichern"
+
+[index-list]
+heading					= "Module"
+buttonEdit				= "bearbeiten"
+buttonRestore			= "zurücksetzen"
+
+
+[index-filter]
+heading					= "Filter"
+labelCategory			= "Kategorie"
+labelModuleId			= "Modul"
+buttonSearch			= "filtern"
+buttonReset				= "alle"
+
+[edit]
+heading					= "Modul"
+buttonCancel			= "zurück"
+buttonSave				= "speichern"
+buttonRestore			= "zurücksetzen"
+msgSuccessSaved			= "Die Einstellungen wurden gespeichert."
+msgSuccessRestored		= "Die vorherigen Einstellungen wurden wiederhergestellt."
 
 [msg]
-successSaved		= "Die Einstellungen wurden gespeichert."
-successRestored		= "Die vorherigen Einstellungen wurden wiederhergestellt."
+successSaved			= "Die Einstellungen wurden gespeichert."
+successRestored			= "Die vorherigen Einstellungen wurden wiederhergestellt."
 
