--- a/Admin/Config/locales/en/admin/config.ini
+++ b/Admin/Config/locales/en/admin/config.ini
@@ -1,7 +1,23 @@
 [index]
+
+[index-filter]
+heading				= "Filter"
+labelCategory		= "Category"
+labelModuleId		= "Module"
+buttonSearch		= "filter"
+buttonReset			= "reset"
+
+[index-list]
+heading				= "Modules"
+buttonEdit			= "edit"
+buttonRestort		= "restore"
+
+[edit]
 heading				= "Module configuration"
+buttonCancel		= "cancel"
 buttonSave			= "save"
+buttonRestore		= "restore"
 
 [msg]
-successSaved			= "Settings have been saved."
+successSaved		= "Settings have been saved."
 successRestored		= "Settings of module %s have been restored."
