Support hook Project::onListRelations.

--- a/Work/Issues/locales/de/work/issue.ini
+++ b/Work/Issues/locales/de/work/issue.ini
@@ -107,3 +107,6 @@ buttonCollapse			= "weniger"
 titlePriority			= "Priorität"
 titleStatus				= "Status"
 titleType				= "Typ"
+
+[hook-relations]
+label					= "Probleme"
