Support hook Project::onListRelations.

--- a/Work/Notes/locales/de/work/note.ini
+++ b/Work/Notes/locales/de/work/note.ini
@@ -75,3 +75,6 @@ successNoteLinkAdded	= "Der Notiz-Link wurde hinzugefügt."
 successNoteLinkRemoved	= "Der Notiz-Link entfernt."
 successNoteTagAdded		= "Das Notiz-Schlüsselwort wurde hinzugefügt."
 successNoteTagRemoved	= "Das Notiz-Schlüsselwort wurde entfernt."
+
+[hook-relations]
+label					= "Notizen"
