Rework support for hook Project::onListRelations.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -297,3 +297,6 @@ neg2					= "Klingt anstrengend :-|"
 neg3					= "Nervt wa? Aber muss ja ;)"
 neg4					= "Na hoffentlich regnet es nicht auch noch..."
 neg5					= "Und dann geht's sicher wieder in die Kneipe, wa?"
+
+[hook-relations]
+label					= "Aufgaben/Termine"
