Make project creator changable.

--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -44,6 +44,7 @@ DESC					= "absteigend"
 
 [add]
 heading					= "Neues Projekt"
+labelCreatorId			= "Ersteller"
 labelStatus				= "Status"
 labelPriority			= "Priorität"
 labelUrl				= "URL"
@@ -58,6 +59,7 @@ msgTitleExisting		= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits
 
 [edit]
 heading					= "Projekt"
+labelCreatorId			= "Ersteller"
 labelStatus				= "Status"
 labelPriority			= "Priorität"
 labelUrl				= "URL"
