--- a/Manage/My/User/Settings/locales/de/manage/my/user/setting.ini
+++ b/Manage/My/User/Settings/locales/de/manage/my/user/setting.ini
@@ -1,6 +1,6 @@
 [module]
 title					= "Benutzereinstellungen"
-tab						= "Einstellungen"
+tab						= "<i class=\"fa fa-fw fa-cog\"></i>&nbsp;Einstellungen"
 
 [index]
 legend					= "Einstellungen"
@@ -12,4 +12,3 @@ noSettings				= "<div class="hint-empty"><em>Es sind keine Module installiert, d
 msgErrorNumberTooSmall	= "Die Zahl ist zu klein."
 msgErrorNumberTooLarge	= "Die Zahl ist zu groß."
 msgSuccess				= "Die Änderungen an den Einstellungen wurden gespeichert."
-
