Extend model by board description.

--- a/Info/Dashboard/locales/de/info/dashboard.ini
+++ b/Info/Dashboard/locales/de/info/dashboard.ini
@@ -1,17 +1,20 @@
 
-
 [add]
-heading				= "Neues Dashboard"
-labelTitle			= "Titel"
-placeholderTitle	= "z.B. Übersicht oder Zentrale oder Startseite"
-labelDescription	= "Beschreibung"
-labelPanels			= "Panels hinzufügen"
-emptyPanels			= "Derzeit sind keine Panels verfügbar."
-buttonSave			= "save"
-buttonCancel		= "cancel"
+heading					= "Neues Dashboard"
+labelTitle				= "Titel"
+placeholderTitle		= "z.B. Übersicht oder Zentrale oder Startseite"
+labelDescription		= "Beschreibung"
+labelPanels				= "Panels hinzufügen"
+emptyPanels				= "Derzeit sind keine Panels verfügbar."
+buttonSave				= "speichern"
+buttonCancel			= "abbrechen"
 
 
 [add-panel]
-heading				= "Neues Panel im Dashboard"
-buttonSave			= "save"
-buttonCancel		= "cancel"
+heading					= "Neues Panel im Dashboard"
+buttonSave				= "hinzufügen"
+buttonCancel			= "abbrechen"
+
+[board]
+buttonRemove			= "entfernen"
+buttonRemove_confirm	= "Wirklich ?"
