Extract logic to class.

--- a/Info/Dashboard/locales/de/info/dashboard.ini
+++ b/Info/Dashboard/locales/de/info/dashboard.ini
@@ -1,20 +1,33 @@
 
 [add]
-heading					= "Neues Dashboard"
-labelTitle				= "Titel"
-placeholderTitle		= "z.B. Übersicht oder Zentrale oder Startseite"
-labelDescription		= "Beschreibung"
-labelPanels				= "Panels hinzufügen"
-emptyPanels				= "Derzeit sind keine Panels verfügbar."
-buttonSave				= "speichern"
-buttonCancel			= "abbrechen"
-
+heading						= "Neues Dashboard"
+labelTitle					= "Titel"
+labelDescription			= "Beschreibung <small class="muted">(optional)</small>"
+labelPanels					= "Panels hinzufügen"
+labelSelect					= "dieses Dashboard anschließend aktivieren"
+placeholderTitle			= "z.B. Übersicht oder Zentrale oder Startseite"
+emptyPanels					= "Derzeit sind keine Panels verfügbar."
+buttonSave					= "speichern"
+buttonCancel				= "abbrechen"
 
 [add-panel]
-heading					= "Neues Panel im Dashboard"
-buttonSave				= "hinzufügen"
-buttonCancel			= "abbrechen"
+heading						= "Neues Panel im Dashboard"
+buttonSave					= "hinzufügen"
+buttonCancel				= "abbrechen"
 
 [board]
-buttonRemove			= "entfernen"
-buttonRemove_confirm	= "Wirklich ?"
+buttonRemove				= "entfernen"
+buttonRemove_confirm		= "Wirklich ?"
+
+[msg]
+successDashboardAdded		= "Das Dashboard '%s' wurde hinzugefügt."
+successDashboardRemoved		= "Das Dashboard '%s' wurde entfernt."
+successPanelAdded			= "Das Panel '%s' wurde hinzugefügt."
+successPanelRemoved			= "Das Panel '%s' wurde entfernt."
+successPanelsAdded			= "Es wurden %s Panels hinzugefügt."
+errorUserDashboardsDisabled	= "Aktion abgebrochen, da benutzerspezifische Dashboards nicht aktiviert sind."
+errorNoActiveUserDashboard	= "Aktion abgebrochen, da es kein aktives Dashboard gibt."
+errorInvalidUserDashboard	= "Zugriff verweigert. Kein gültiges Benutzer-Dashboard gewählt."
+errorPanelDiscontinued		= "Das Panel mit der ID "%s" wird nicht mehr angeboten."
+errorException				= "Eine <abbr title="%s">unerwartete Situation</abbr> ist aufgetreten."
+errorPanelLimitReached		= "Die maximale Anzahl an Panels wurde erreicht. Weitere werden nicht hinzugefügt."
