--- a/Info/Dashboard/locales/en/info/dashboard.ini
+++ b/Info/Dashboard/locales/en/info/dashboard.ini
@@ -1,20 +1,33 @@
 
 [add]
-heading					= "New dashboard"
-labelTitle				= "Title"
-placeholderTitle		= ""
-labelDescription		= "Description"
-labelPanels				= "Add panels"
-emptyPanels				= "No panels available at the moment."
-buttonSave				= "Save"
-buttonCancel			= "Cancel"
-
+heading						= "New dashboard"
+labelTitle					= "Title"
+labelDescription			= "Description <small class="muted">(optional)</small>"
+labelPanels					= "Add panels"
+labelSelect					= "dieses Dashboard anschließend aktivieren"
+placeholderTitle			= ""
+emptyPanels					= "No panels available at the moment."
+buttonSave					= "Save"
+buttonCancel				= "Cancel"
 
 [add-panel]
-heading					= "New panel in dashboard"
-buttonSave				= "Add"
-buttonCancel			= "Cancel"
+heading						= "New panel in dashboard"
+buttonSave					= "Add"
+buttonCancel				= "Cancel"
 
 [board]
-buttonRemove			= "remove"
-buttonRemove_confirm	= "Really ?"
+buttonRemove				= "remove"
+buttonRemove_confirm		= "Really ?"
+
+[msg]
+successDashboardAdded		= "Dashboard '%s' has been created."
+successDashboardRemoved		= "Dashboard '%s' has been removed."
+successPanelAdded			= "Panel '%s' has been added to dashboard."
+successPanelRemoved			= "Panel '%s' has been removed from dashboard."
+successPanelsAdded			= "%s panels have been added to dashboard."
+errorUserDashboardsDisabled	= "Action canceled since user-defined dashboards are not enabled."
+errorNoActiveUserDashboard	= "Action canceled since there is no current dashboard."
+errorInvalidUserDashboard	= "Access denied. No valid user dashboard selected."
+errorPanelDiscontinued		= "Panel withID "%s" is no longer available."
+errorException				= "An <abbr title="%s">unexpected situation</abbr> has occurred."
+errorPanelLimitReached		= "The limit of panels per dashboard has been reached. Further panels will not be added."
