--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -16,16 +16,16 @@ config.mail.daily		= "Tägliche Status-Mail"
 config.mail.daily.hour	= "Sendestunde der Status-Mail"
 
 [index]
-heading				= "Missionen"
-labelQuery			= "Suchwort"
-labelOrder			= "Sortierung"
-labelDirection		= "Richtung"
-buttonAdd			= "neue Mission"
-buttonFilter		= "filtern"
-buttonReset			= "alle"
-suffixTime			= "Uhr"
-messageLoadingList	= "Lade Aufgaben und Termine..."
-messageNoEntries	= "Keine Einträge gefunden."
+heading					= "Missionen"
+labelQuery				= "Suchwort"
+labelOrder				= "Sortierung"
+labelDirection			= "Richtung"
+buttonAdd				= "neue Mission"
+buttonFilter			= "filtern"
+buttonReset				= "alle"
+suffixTime				= "Uhr"
+messageLoadingList		= "Lade Aufgaben und Termine..."
+messageNoEntries		= "Keine Einträge gefunden."
 
 [add]
 legend					= "Aufgabe/Termin hinzufügen"
@@ -49,7 +49,8 @@ labelWorker				= "Bearbeiter"
 labelProjectId			= "Projekt"
 buttonCancel			= "zur Liste"
 buttonSave				= "speichern"
-msgSuccess				= "Die Aufgabe wurde hinzugefügt."
+msgSuccessTask			= "Die Aufgabe wurde hinzugefügt."
+msgSuccessEvent			= "Der Termin wurde hinzugefügt."
 msgNoContent			= "Der Inhalt fehlt."
 msgNotEditor			= "Das Recht zum Erstellen neuer Aufgaben wurde nicht vergeben."
 msgNoProjectYet			= "Bitte zuerst ein Projekt anlegen. Weiterleitung zur Projektverwaltung."
