Finish locale extraction.

--- a/Info/Dashboard/locales/de/info/dashboard.ini
+++ b/Info/Dashboard/locales/de/info/dashboard.ini
@@ -12,6 +12,9 @@ buttonCancel				= "abbrechen"
 
 [add-panel]
 heading						= "Neues Panel im Dashboard"
+labelPanels					= "Panels"
+emptyPanels					= "Derzeit sind keine Panels verfügbar."
+noMorePanels				= "Es sind keine weiteren Panels verfügbar."
 buttonSave					= "hinzufügen"
 buttonCancel				= "abbrechen"
 
