--- a/Info/Dashboard/locales/en/info/dashboard.ini
+++ b/Info/Dashboard/locales/en/info/dashboard.ini
@@ -4,7 +4,7 @@ heading						= "New dashboard"
 labelTitle					= "Title"
 labelDescription			= "Description <small class="muted">(optional)</small>"
 labelPanels					= "Add panels"
-labelSelect					= "dieses Dashboard anschließend aktivieren"
+labelSelect					= "Use this dashboard afterwards"
 placeholderTitle			= ""
 emptyPanels					= "No panels available at the moment."
 buttonSave					= "Save"
@@ -12,6 +12,9 @@ buttonCancel				= "Cancel"
 
 [add-panel]
 heading						= "New panel in dashboard"
+labelPanels					= "Panels to add right now"
+emptyPanels					= "No panels available."
+noMorePanels				= "There are no more panels available."
 buttonSave					= "Add"
 buttonCancel				= "Cancel"
 
