Add dashboard panel to show current tasks.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -301,3 +301,9 @@ neg5					= "Und dann geht's sicher wieder in die Kneipe, wa?"
 
 [hook-relations]
 label					= "Aufgaben/Termine"
+
+
+[dashboard-panel-my-today]
+
+
+[dashboard-panel-my-tasks]
