Start implementing a file view.

--- a/Info/Files/locales/de/info/file.ini
+++ b/Info/Files/locales/de/info/file.ini
@@ -6,6 +6,7 @@ headTimestamp		= "hochgeladen"
 headDownloads		= "runtergeladen"
 headActions			= "Aktionen"
 buttonOpenFolder	= "Ordner öffnen"
+buttonView			= "anzeigen"
 buttonDownload		= "herunterladen"
 buttonRemove		= "entfernen"
 buttonRename		= "umbenennen"
@@ -39,6 +40,16 @@ heading				= "Ordern ändern"
 buttonSave			= "umbenennen"
 buttonRemove		= "entfernen"
 
+[view]
+heading				= "Details"
+buttonCancel		= "zurück"
+buttonDownload		= "herunterladen"
+buttonRemove		= "entfernen"
+prefixTimePhrase	= "vor "
+suffixDownloads		= " mal"
+
+
+
 [msgErrorUpload]
 1				= "Die Datei ist zu groß."
 2				= "Die Datei ist zu groß."
@@ -52,5 +63,3 @@ buttonRemove		= "entfernen"
 infoScanFoundSomething		= "Bei der Untersuchung wurden %s Ordner und %s Dateien entdeckt und im Index aufgenommen: %s"
 infoScanRemovedSomething	= "Bei der Untersuchung wurden %s Ordner und %s Dateien vermisst und aus dem Index entfernt: %s"
 infoScanNoChanges			= "Die Untersuchung hat keine Änderungen gefunden."
-
-
