Fix migration bugs.

--- a/Manage/Catalog/Bookstore/locales/de/manage/catalog/bookstore.ini
+++ b/Manage/Catalog/Bookstore/locales/de/manage/catalog/bookstore.ini
@@ -1,6 +1,6 @@
 [tabsMain]
-;manage/catalog				= "Übersicht"
-manage/catalog/article		= "<i class='icon-book'></i> Veröffentlichungen"
-manage/catalog/author		= "<i class='icon-user'></i> Autoren"
-manage/catalog/category		= "<i class='icon-list'></i> Fachbereiche & Serien"
-manage/catalog/tag			= "<i class='icon-tag'></i> Schlagwörter"
+;manage/catalog						= "Übersicht"
+manage/catalog/bookstore/article	= "<i class='icon-book'></i> Veröffentlichungen"
+manage/catalog/bookstore/author		= "<i class='icon-user'></i> Autoren"
+manage/catalog/bookstore/category	= "<i class='icon-list'></i> Fachbereiche & Serien"
+manage/catalog/bookstore/tag		= "<i class='icon-tag'></i> Schlagwörter"
