Fill static content blocks with hidden examples.

--- a/Info/Contact/locales/de/info/contact.ini
+++ b/Info/Contact/locales/de/info/contact.ini
@@ -1,5 +1,5 @@
 [index]
-heading						= "Kontaktaufnahme"
+heading						= "Kontaktformular"
 labelEmail					= "Ihre E-Mail-Adresse"
 labelName					= "Ihr Name"
 labelSubject				= "Betreff"
@@ -23,5 +23,3 @@ subject						= "Kontakt: %2$s: \"%1$s\""
 
 [mailSalutations]
 0	= "Hallo!"
-
-
