Add domain check and access token.

--- a/Resource/Authentication/Backend/REST/locales/de/auth/rest.ini
+++ b/Resource/Authentication/Backend/REST/locales/de/auth/rest.ini
@@ -20,12 +20,14 @@ msgSuccess					= "Sie sind nun eingeloggt."
 msgNoticePasswordChanged	= "Das neue Passwort ist nun aktiv. Das alte Passwort gilt nicht mehr."
 msgNoUsername				= "Der <label for="input_login_username">Benutzername</label> fehlt."
 msgNoPassword				= "Das <label for="input_login_password">Passwort</label> fehlt."
+msgInvalidDomain			= "Zugang verweigert: Die Domäne ist unbekannt oder falsch geschrieben."
 msgInvalidUser				= "Zugang verweigert: Das Benutzerkonto existiert nicht."
 msgInvalidPassword			= "Zugang verweigert: Das Passwort ist falsch."
 msgInvalidRole				= "Zugang für diesen Benutzer verweigert."
 msgUserUnconfirmed			= "Zugang verweigert: Das Benutzerkonto wurde noch nicht bestätigt."
 msgUserLocked				= "Zugang verweigert: Das Benutzerkonto wurde gesperrt."
 msgUserDisabled				= "Zugang verweigert: Das Benutzerkonto wurde deaktiviert."
+msgDomainDisabled			= "Zugang verweigert: Die Domäne ist derzeit deaktiviert."
 
 [login-info]
 legend						= "Information"
