Support new mail model statuses.

--- a/Admin/Mail/locales/de/admin/mail/queue.ini
+++ b/Admin/Mail/locales/de/admin/mail/queue.ini
@@ -1,9 +1,14 @@
 [states]
--2						= "unmöglich"
--1						= "abgebrochen"
+-3						= "abgebrochen"
+-2						= "gescheitert"
+-1						= "fehlgeschlagen"
 0						= "neu"
-1						= "versucht"
+1						= "wird gesendet"
 2						= "gesendet"
+3						= "angekommen"
+4						= "geöffnet"
+5						= "beantwortet"
+6						= "archiviert"
 
 [index]
 heading					= ""
