Set file permissions.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -192,6 +192,7 @@ project					= "Projekt"
 priority				= "Priorität"
 status					= "Zustand"
 type					= "Eintragtyp"
+worker					= "Bearbeiter"
 
 [filter-orders]
 status					= "Zustand"
