Add relation filter to show my issues.

--- a/Work/Issues/locales/de/work/issue.ini
+++ b/Work/Issues/locales/de/work/issue.ini
@@ -97,6 +97,7 @@ labelTitle				= "Titel"
 labelOrder				= "Sortierung"
 labelDirection			= "Richtung"
 labelLimit				= "max."
+labelRelation			= "Bezug zu mir"
 buttonFilter			= "filtern"
 buttonReset				= "alle"
 buttonExpand			= "mehr"
