Integrate event map.

--- a/Info/Events/locales/de/info/event.ini
+++ b/Info/Events/locales/de/info/event.ini
@@ -11,3 +11,21 @@
 10				= "Oktober"
 11				= "November"
 12				= "Dezember"
+
+
+[panel-search]
+heading						= "Filter"
+labelQuery					= "Suchbegriff"
+labelQuery_suffix			= "(e)"
+labelQuery_placeholder		= "z.B. Auto"
+labelLocation				= "Ort"
+labelLocation_suffix		= " (oder PLZ)"
+labelLocation_placeholder	= "z.B. Berlin"
+labelRange					= "Umkreis"
+labelRange_suffix			= " (in km)"
+labelRange_placeholder		= "10 (Standard)"
+buttonFilter				= "suchen"
+buttonFilter_title			= "suchen"
+buttonReset					= "zurücksetzen"
+buttonReset_confirm			= "Wirklich?"
+buttonReset_title			= "Alles auf Anfang!"
