Finish implementation of planned module.

--- a/Manage/Pages/locales/de/manage/page.ini
+++ b/Manage/Pages/locales/de/manage/page.ini
@@ -63,7 +63,8 @@ labelType						= "Seitentyp"
 labelFormat						= "Format"
 labelScope						= "Navigationsbereich"
 labelParentId						= "Unterseite von"
-labelModule						= "Modul"
+labelController					= "Controller"
+labelAction						= "Action"
 labelRank						= "Rang"
 labelIcon						= "Icon"
 buttonSave						= "speichern"
@@ -77,7 +78,8 @@ labelType						= "Seitentyp"
 labelFormat						= "Format"
 labelScope						= "Navigationsbereich"
 labelParentId					= "Unterseite von"
-labelModule						= "Modul"
+labelController					= "Controller"
+labelAction						= "Action"
 labelRank						= "Rang"
 labelChangefreq					= "Änderungshäufigkeit"
 labelPriority					= "Wichtigkeit"
