Use new mail template support.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -262,24 +262,22 @@ heading					= ""
 greeting				= "Hallo %1$s, heute ist %2$s und es gibt etwas zu erledigen."
 textNoTasks				= ""
 textNoEvents			= ""
-headingTasks			= "Du hast heute folgende Aufgaben:"
+headingTasks			= "Aktuelle Aufgaben:"
 headingEvents			= "Heutige Termine:"
-textSignature			= "dein Ceus Media Office"
 suffixTime				= "Uhr"
 
 [mail-update]
 subject					= "Änderung"
-heading					= ""
+message					= "%1$s "%2$s" wurde von %3$s" verändert."
 greeting				= "Hallo %1$s, eine Aufgabe wurde verändert, der du zugewiesen bist."
+headingFacts			= "Fakten"
 changes					= "Änderungen"
-textSignature   	    = "dein Ceus Media Office"
 
 [mail-new]
 subject					= "Neue Aufgabe"
-heading					= ""
+message					= "%1$s "%2$s" wurde von %3$s" erstellt."
 greeting				= "Hallo %1$s, es gibt eine neue Aufgabe."
-facts					= "Fakten"
-textSignature   	    = "dein Ceus Media Office"
+headingFacts			= "Fakten"
 
 [mail-salutes]
 pos0					= "Viel Erfolg!"
