Add panel for user passwords.

--- a/Manage/My/User/locales/de/manage/my/user.ini
+++ b/Manage/My/User/locales/de/manage/my/user.ini
@@ -28,6 +28,13 @@ user					= "<i class=\"fa fa-fw fa-user\"></i>&nbsp;Konto"
 4						= "aktiv"
 5						= "neue Nachricht"
 
+[password-statuses]
+-2						= "annulliert"
+-1						= "abgelaufen"
+0						= "angefragt"
+1						= "gültig & aktiv"
+
+
 [pstrength]
 mininumLength			= "Minimum: %d Zeichen"
 verdict-1				= "schwach"
