Support tabs for multiple login backends.

--- a/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
+++ b/Resource/Authentication/Backend/Local/locales/de/auth/local.ini
@@ -8,6 +8,7 @@ config.logout.auto			= "Sitzung automatisch beenden"
 config.session.refresh		= "Sitzung automatisch erhalten"
 
 [login]
+tab							= "Benutzerzugang"
 heading						= "Login"
 labelUsername				= "Benutzername"
 labelPassword				= "Passwort"
