--- a/Resource/Authentication/Backend/Local/locales/en/auth/local.ini
+++ b/Resource/Authentication/Backend/Local/locales/en/auth/local.ini
@@ -5,6 +5,7 @@ config.logout.auto			= "Close session automatically"
 config.session.refresh		= "Keep session alive"
 
 [login]
+tab							= "Customer Access"
 heading						= "Log in"
 labelUsername				= "Username"
 labelPassword				= "Password"
