--- a/Resource/Authentication/Backend/OAuth/locales/de/auth/oauth.ini
+++ b/Resource/Authentication/Backend/OAuth/locales/de/auth/oauth.ini
@@ -11,6 +11,7 @@ config.session.refresh		= "Sitzung automatisch erhalten"
 msgAccessDenied			= "Die Benutzerdaten sind nicht korrekt."
 
 [login]
+tab						= "Zugang mit anderem Service"
 heading					= "Login"
 labelUsername			= "Benutzername"
 labelPassword			= "Passwort"
