--- a/Resource/Authentication/Backend/OAuth/locales/en/auth/oauth.ini
+++ b/Resource/Authentication/Backend/OAuth/locales/en/auth/oauth.ini
@@ -5,52 +5,53 @@ config.logout.auto			= "Close session automatically"
 config.session.refresh		= "Keep session alive"
 
 [login]
-heading					= "Log in"
-labelUsername			= "Username"
-labelPassword			= "Password"
-labelRemember			= "Remember me"
-labelRemember_title		= "Automatically log in"
-buttonLogin				= "Log in"
-buttonRegister			= "Register a new account"
-buttonPassword			= "Forgot password?"
-msgSuccess				= "You successfully have logged in."
-msgNoUsername			= "The <label for="input_login_username">username</label> is missing."
-msgNoPassword			= "The <label for="input_login_password">password</label> is missing."
-msgInvalidUser			= "Access denied: No user with this username found."
-msgInvalidPassword		= "Access denied: The password is invalid."
-msgInvalidRole			= "Access denied: Permitted by user role."
-msgUserUnconfirmed		= "Access denied: This user account has not been confirmed, yet."
-msgUserLocked			= "Access denied: This user account has been locked."
-msgUserDisabled			= "Access denied: This user account has been disabled."
+tab							= "Access with another Service"
+heading						= "Log in"
+labelUsername				= "Username"
+labelPassword				= "Password"
+labelRemember				= "Remember me"
+labelRemember_title			= "Automatically log in"
+buttonLogin					= "Log in"
+buttonRegister				= "Register a new account"
+buttonPassword				= "Forgot password?"
+msgSuccess					= "You successfully have logged in."
+msgNoUsername				= "The <label for="input_login_username">username</label> is missing."
+msgNoPassword				= "The <label for="input_login_password">password</label> is missing."
+msgInvalidUser				= "Access denied: No user with this username found."
+msgInvalidPassword			= "Access denied: The password is invalid."
+msgInvalidRole				= "Access denied: Permitted by user role."
+msgUserUnconfirmed			= "Access denied: This user account has not been confirmed, yet."
+msgUserLocked				= "Access denied: This user account has been locked."
+msgUserDisabled				= "Access denied: This user account has been disabled."
 
 [login-info]
-legend					= "Information"
+legend						= "Information"
 
 [logout]
-msgSuccess				= "You have logged out."
-msgAutoLogout			= "Due to longer inactivity, you have been logged out automatically."
+msgSuccess					= "You have logged out."
+msgAutoLogout				= "Due to longer inactivity, you have been logged out automatically."
 
 [password]
-heading					= "Forgot password?"
-labelEmail				= "Mail address <small class="muted">(used for registration)</small>"
-buttonSend				= "Send"
-msgSuccess				= "A new password has been set and sent to you by mail."
-msgNoEmail				= "Please enter the <label for="input_password_email">email address</label> you have used for signing up."
-msgInvalidEmail			= "No user account found relating to this <label for="input_password_email">email address</label>."
-msgSendingMailFailed	= "The email containing the new password could not been sent <small>(%s)</small>. Please try again later!"
+heading						= "Forgot password?"
+labelEmail					= "Mail address <small class="muted">(used for registration)</small>"
+buttonSend					= "Send"
+msgSuccess					= "A new password has been set and sent to you by mail."
+msgNoEmail					= "Please enter the <label for="input_password_email">email address</label> you have used for signing up."
+msgInvalidEmail				= "No user account found relating to this <label for="input_password_email">email address</label>."
+msgSendingMailFailed		= "The email containing the new password could not been sent <small>(%s)</small>. Please try again later!"
 
 [confirm]
-heading					= "Confirm account"
-labelCode				= "Confirmation code <small class="muted">(send to you by mail)</small>"
-buttonSend				= "Check"
-msgSuccess				= "Your account has been confirmed. You can log in, now."
-msgInvalidCode			= "The <label for="input_confirm_code">confirmation code</label> is invalid."
+heading						= "Confirm account"
+labelCode					= "Confirmation code <small class="muted">(send to you by mail)</small>"
+buttonSend					= "Check"
+msgSuccess					= "Your account has been confirmed. You can log in, now."
+msgInvalidCode				= "The <label for="input_confirm_code">confirmation code</label> is invalid."
 
 [gender]
-0						= "not provided"
-1						= "Woman"
-2						= "Man"
-3						= "Transgender"
+0							= "not provided"
+1							= "Woman"
+2							= "Man"
+3							= "Transgender"
 
 [mails]
-onRegister				= "Registrierung und Kontobestätigung"
+onRegister					= "Registrierung und Kontobestätigung"
