--- a/Resource/Authentication/Backend/JSON/locales/de/auth/json.ini
+++ b/Resource/Authentication/Backend/JSON/locales/de/auth/json.ini
@@ -8,6 +8,7 @@ config.logout.auto			= "Sitzung automatisch beenden"
 config.session.refresh		= "Sitzung automatisch erhalten"
 
 [login]
+tab							= "Serverzugang"
 heading						= "Login"
 labelUsername				= "Benutzername"
 labelPassword				= "Passwort"
