--- a/Resource/Authentication/Backend/REST/locales/en/auth/rest.ini
+++ b/Resource/Authentication/Backend/REST/locales/en/auth/rest.ini
@@ -8,6 +8,7 @@ config.logout.auto			= "Close session automatically"
 config.session.refresh		= "Keep session alive"
 
 [login]
+tab							= "Access to Server"
 heading						= "Log in"
 labelUsername				= "Username"
 labelPassword				= "Password"
