Rewrite mail classes to support HTML and plain text.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -32,11 +32,14 @@ legend					= "Aufgabe/Termin hinzufügen"
 labelType				= "Typ"
 labelPriority			= "Priorität"
 labelStatus				= "Zustand"
-labelDayWork			= "Tag"
+labelDate				= "Datum"
+labelDayWork			= "Beginn am"
 labelDayDue				= "Fällig am"
 labelDayStart			= "Starttag"
 labelDayEnd				= "Endtag"
 labelTime				= "Zeit"
+labelTime_prefix		= ""
+labelTime_suffix		= " Uhr"
 labelTimeStart			= "Startzeit"
 labelTimeEnd			= "Endzeit"
 labelMinutesProjected	= "<abbr title="(hh:mm)">Planzeit</abbr>"
@@ -60,7 +63,7 @@ legend					= "Aufgabe/Termin bearbeiten"
 labelType				= "Typ"
 labelPriority			= "Priorität"
 labelStatus				= "Zustand"
-labelDayWork			= "Tag"
+labelDayWork			= "Beginn am"
 labelDayDue				= "Fällig am"
 labelDayStart			= "Starttag"
 labelDayEnd				= "Endtag"
@@ -123,6 +126,8 @@ heading					= "Fakten"
 labelType				= "Typ"
 labelPriority			= "Priorität"
 labelStatus				= "Status"
+labelDayWork			= "Beginn am"
+labelDayDue				= "Fällig am"
 labelDayStart			= "Starttag"
 labelDayEnd				= "Endtag"
 labelTimeStart			= "Startzeit"
@@ -266,18 +271,20 @@ headingTasks			= "Aktuelle Aufgaben:"
 headingEvents			= "Heutige Termine:"
 suffixTime				= "Uhr"
 
-[mail-update]
-subject					= "Änderung"
-message					= "%1$s "%2$s" wurde von %3$s" verändert."
-greeting				= "Hallo %1$s, eine Aufgabe wurde verändert, der du zugewiesen bist."
-headingFacts			= "Fakten"
-changes					= "Änderungen"
-
 [mail-new]
-subject					= "Neue Aufgabe"
+subjectTask				= "Neue Aufgabe: %1$s"
+subjectEvent			= "Neuer Termin: %1$s"
 message					= "%1$s "%2$s" wurde von %3$s" erstellt."
 greeting				= "Hallo %1$s, es gibt eine neue Aufgabe."
-headingFacts			= "Fakten"
+emptyContent			= "Keine Beschreibung vorhanden."
+
+[mail-update]
+subjectTask				= "Änderung bei Aufgabe: %1$s"
+subjectEvent			= "Änderung bei Termin: %1$s"
+message					= "%1$s "%2$s" wurde von %3$s" verändert."
+greeting				= "Hallo %1$s, eine Aufgabe wurde verändert, der du zugewiesen bist."
+changes					= "Änderungen"
+emptyContent			= "Keine Beschreibung vorhanden."
 
 [mail-salutes]
 pos0					= "Viel Erfolg!"
