Support FontAwesome and improved panels.

--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -53,12 +53,12 @@ labelDescription		= "Beschreibung"
 buttonCancel			= "zurück"
 buttonSave				= "speichern"
 
-msgSuccess				= "Das Projekt wurde angelegt. Jetzt können weitere Teilnehmer hinzugefügt werden."
+msgSuccess				= "Das Projekt wurde angelegt."
 msgTitleMissing			= "Das Projekt braucht einen Titel."
 msgTitleExisting		= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits."
 
 [edit]
-heading					= "Projekt"
+heading					= "Projekt bearbeiten"
 labelCreatorId			= "Ersteller"
 labelStatus				= "Status"
 labelPriority			= "Priorität"
