Add virus check error handling.

--- a/Resource/Upload/locales/de/resource/upload.ini
+++ b/Resource/Upload/locales/de/resource/upload.ini
@@ -12,5 +12,6 @@
 11						= "Dateien mit dieser Dateiendung werden nicht unterstützt."
 12						= "Der Inhalt der Datei ist in einem Format, das nicht unterstützt wird."
 13						= "Die hochgeladene Datei ist keine Bilddatei."
+14						= "Die Datei "%s" beinhaltet den Virus "%s"."
 
 20						= "Die hochgeladene Datei ist nicht frei von Computerviren."
