Extend tabs by badges of counted entities.

--- a/Manage/Catalog/Bookstore/locales/de/manage/catalog/bookstore/article.ini
+++ b/Manage/Catalog/Bookstore/locales/de/manage/catalog/bookstore/article.ini
@@ -164,7 +164,8 @@ labelMark					= "Markierung"
 labelPrice					= "Preis <small class='muted'>€€.¢¢</small>"
 labelSize					= "Umfang"
 labelDigestion				= "Verarbeitung"
-labelPublication			= "Erscheinungsdatum <small class='muted'>(dd.)(mm.)aaaa</small>"
+labelPublication			= "Erscheinungsdatum"
+labelPublication_title		= "Format: (dd.)(mm.)aaaa"
 labelRecension				= "Rezension"
 buttonCancel				= "zurück"
 buttonSave					= "speichern"
@@ -184,7 +185,8 @@ labelMark					= "Markierung"
 labelPrice					= "Preis <small class='muted'>€€.¢¢</small>"
 labelSize					= "Umfang"
 labelDigestion				= "Verarbeitung"
-labelPublication				= "Erscheinungsdatum <small class='muted'>(dd.)(mm.)aaaa</small>"
+labelPublication			= "Erscheinungsdatum"
+labelPublication_title		= "Format: (dd.)(mm.)aaaa"
 labelRecension				= "Rezension"
 labelAuthor					= "Autor"
 labelRole					= "Rolle"
